cambio musica urbana

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 	<section class="hero">
 		<h1>Jandro</h1>
-		<h2>Música Para las Niñas.</h2>
+		<h2>Música Urbana.</h2>
 		<a href="#" class="boton">Escucha mi música</a>
 	</section>
 
