--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
 	</section>
 
 	<footer>
-		<p>Derechos reservados &copy; 2023 Nombre del Artista</p>
+		<p>Derechos reservados &copy; 2023 Jandro.Vzla
+        </p>
 	</footer>
 </body>
 </html>
